fixed dynamic resizing and spacing on splash page

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -51,5 +51,5 @@ html {
 
 .intro .intro-body .intro-text {
 	font-family: lato;
-    font-size: 1.7vw;
+    font-size: 1.6vw;
 }
